<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="DigitalInputParametersFB" Id="{1c129cf4-e078-4866-a8ce-b1abba9158eb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK DigitalInputParametersFB
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Update" Id="{bcc8f67f-ad34-499b-95a3-952cba7b7173}">
      <Declaration><![CDATA[METHOD Update : BOOL
VAR_INPUT
	DI: REFERENCE TO GreenMasterDI_Base;
	Parameters: REFERENCE TO GreenMasterBaseParameters;
	DIn: reference to DigitalInputParameters;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT Parameters.System.Operation.Simulation THEN
	DIn.AUTO := DI.AUTO;
	DIn.FireExtractAlarm := DI.FireExtractAlarm;
	DIn.FuseAlarm := DI.FuseAlarm;
	DIn.HAND := DI.Hand;
	DIn.T_GQ1_Alarm := DI.T_GQ1_Alarm;
	DIn.F_GQ1_Alarm := DI.F_GQ1_Alarm;
	DIn.F_QM2_Closed := DI.F_QM2_Closed;
	DIn.F_QM2_Open := DI.F_QM2_Open;
	DIn.ExtendedOperation := DI.ExtendedOperation;
	DIn.ServiceAlarmCentralAndSmokeExhaustAir := DI.ServiceAlarmCentralAndSmokeExhaustAir;
	DIn.FireSupplyAlarm := DI.FireSupplyAlarm;
	DIn.ServiceAlarmSupplyAir := DI.ServiceAlarmSupplyAir;
	DIn.H_GP1_Running := DI.H_GP1_Running;
	DIn.H_GP1_Alarm := DI.H_GP1_Alarm;
	DIn.C_GP1_Running := DI.C_GP1_Running;
	DIn.C_GP1_Alarm := DI.C_GP1_Alarm;
	DIn.TX1_Running := DI.TX1_Running;
	DIn.ResetAlarm := DI.ResetAlarm;
	DIn.P2_Running := DI.P2_Running;
	DIn.ExpansionVesselAlarm := DI.ExpansionVesselAlarm;
	DIn.FirePanelSupplyStart := DI.FireActivateSupplyAir;
	DIn.FirePanelSupplyStop := DI.FireDeactivateSupplyAir;
	DIn.FirePanelExtractStart := DI.FireActivateExtractAir;
	DIn.FirePanelExtractStop := DI.FireDeactivateExtractAir;
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>